# search-and-replace

./: .gitignore  .pre-commit-config.yaml  LICENSE  Readme.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: api.rst  conf.py  index.rst
examples/: fix_ocr_errors.py
src/search_and_replace/: __init__.py  batch.py  cli.py  correctors.py  hyperscan_engine.py  postprocess.py
tests/: conftest.py  test_batch.py  test_correctors.py  test_postprocess.py
